--- a/style.css
+++ b/style.css
@@ -1,23 +1,46 @@
-body {
-    background-color:rgb(236, 236, 236);
+@charset "UTF-8";
+
+* {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 15px;
+}
+
+main {
+    background-color: #F0F3BD;
+    margin: auto;
+    padding: 10px;
+    box-shadow: 5px 5px 15px #193133c7;
+    border-radius: 10px;
+    width: 85%;
+}
+
+body {
+    background-image: linear-gradient(to right, #00BFB2, #028090);
 }
 
 h1 {
     text-align: center;
+    color: #1A5E63;
+    text-shadow: 1px 1px 2px #022327b0;
 }
 
 h2 {
     text-align: center;
+    color: #028090;
+    text-shadow: 1px 1px 1px #013f3bb2;
 }
 
 p {
     text-align: justify;
 }
 
+strong {
+    font-size: 1.1em;
+}
+
 .profile {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    border-radius: 100%;
+    box-shadow: 2px 2px 7px #4f503f;
 }
