--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 main {
-    background-color: #f6f7e2;
+    background-color: #fffffa;
     margin: auto;
     padding: 10px;
     box-shadow: 5px 5px 15px #193133c7;
