--- a/style.css
+++ b/style.css
@@ -33,6 +33,23 @@ p {
     text-align: justify;
 }
 
+a {
+    text-decoration: none;
+    color: black;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+a:visited {
+    color: darkblue;
+}
+
+a:active {
+    color:#5e758f;
+}
+
 .name {
     font-weight: bold;
     font-size: 1.1em;
@@ -44,15 +61,15 @@ p {
 
 .profile {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 100%;
-    box-shadow: 2px 2px 7px #4e4e4e;
+    margin: auto;
+    border-radius: 50%;
+    box-shadow: 2px 2px 6px #4e4e4e;
+    border: 3px solid white;
 }
 
 .crefaz {
     color: #213458;
-    text-decoration: inherit;
+    text-decoration: none;
     font-weight: bold;
 }
 
@@ -61,6 +78,10 @@ p {
 }
 
 .sociais {
-    margin: auto;
-    width: 200px;
+    margin: auto auto 20px auto;
+    width: fit-content;
+}
+
+.links {
+    margin: 3px;
 }
