--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ p {
 
 a {
     text-decoration: none;
-    color: black;
+    color: darkblue;
 }
 
 a:hover {
@@ -43,7 +43,7 @@ a:hover {
 }
 
 a:visited {
-    color: darkblue;
+    color: rgb(4, 4, 56);
 }
 
 a:active {
