--- a/style.css
+++ b/style.css
@@ -50,6 +50,10 @@ a:active {
     color:#5e758f;
 }
 
+img {
+    border-radius: 50%;
+}
+
 .name {
     font-weight: bold;
     font-size: 1.1em;
@@ -62,7 +66,6 @@ a:active {
 .profile {
     display: block;
     margin: auto;
-    border-radius: 50%;
     box-shadow: 2px 2px 6px #4e4e4e;
     border: 3px solid white;
 }
