Scroll to section

--- a/static/style.css
+++ b/static/style.css
@@ -11,6 +11,10 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background-image: whitesmoke;
     margin: 0px;
