--- a/static/style.css
+++ b/static/style.css
@@ -47,6 +47,7 @@ main {
     height: 100%;
     position: relative;
     margin-left: 390px;
+    font-size: 20px;
 }
 
 h2 {
@@ -86,7 +87,8 @@ h2 {
 }
 
 .navbar > li > a > i {
-    width: 25px;
+    width: 30px;
+    text-align: center;
 }
 
 .infos {
@@ -115,7 +117,7 @@ h2 {
     transition: 0.50s;
 }
 
-p {
+section > p {
     text-align: justify;
     max-width: 90%;
     margin: auto;
@@ -167,4 +169,50 @@ img.circle {
     font-size: 10px;
     color: grey;
     text-align: center;
+}
+
+  .workExperience>ul {
+    list-style-type: none;
+    padding-left: 0;
+}
+  .workExperience > ul > li {
+    position: relative;
+    margin: 0;
+    padding-bottom: 20px;
+    padding-left: 60px;
+}
+  .workExperience > ul > li:before {
+    background-color: #c4c4c4;
+    width: 3px;
+    content: '';
+    position: absolute;
+    top: 12px;
+    bottom: -12px;
+    left: 35px;
+}
+  .workExperience > ul > li::after {
+    content: '';
+    position: absolute;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' aria-hidden='true' viewBox='0 0 32 32' focusable='false'%3E%3Ccircle stroke='none' fill='%230060b9' cx='16' cy='16' r='10'%3E%3C/circle%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-size: contain;
+    left: 30px;
+    top: 8px;
+    width: 13px;
+    height: 13px;
+}
+
+.jobDescription {
+    text-align: justify;
+    max-width: 90%;
+    margin-left: 20px;
+}
+
+.bolded {
+    font-weight: bold;
+  }
+
+small {
+    font-size: 14px;
+    color: #696969;
 }
