--- a/static/style.css
+++ b/static/style.css
@@ -5,6 +5,7 @@
     --corsecundaria: #0060b9;
     --corprimaria: #171717;
     --corterciaria: #2e2e2e;
+    --background: #c4c4c4;
     --mobile_view_width: 1000px;
 }
 
@@ -71,6 +72,7 @@ main {
     position: relative;
     padding-left: 400px;
     font-size: 20px;
+    padding-bottom: 100px;
 }
 
 h2 {
@@ -205,7 +207,7 @@ img.circle {
     padding-left: 60px;
 }
   .workExperience > ul > li:before {
-    background-color: #c4c4c4;
+    background-color: var(--background);
     width: 3px;
     content: '';
     position: absolute;
@@ -229,6 +231,7 @@ img.circle {
     text-align: justify;
     max-width: 90%;
     margin-left: 20px;
+    margin-top: 20px;
 }
 
 .bolded {
@@ -276,10 +279,15 @@ small {
     height: 170px;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
 }
 
 .card-content > h4 {
     font-size: 18px;
+    text-align: center;
+}
+.card-content > p {
+    text-align: center;
 }
 
 .card-content > * {
@@ -305,4 +313,168 @@ small {
 
 .credential:active {
     color: var(--corterciaria);
+}
+
+.container-skill {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.container-skill .skill-box {
+    margin: 25px;
+    width: 27%;
+}
+
+
+.skill-box .skill-title {
+    display: block;
+    font-size: 16px;
+    font-weight: 600;
+    color: var(--corterciaria);
+}
+
+.skill-box .skill-bar {
+    height: 8px;
+    width: 100%;
+    border-radius: 6px;
+    margin-top: 6px;
+    background-color: rgba(0,0,0,0.1);
+}
+
+.skill-bar .skill-per {
+    position: relative;
+    display: block;
+    height: 100%;
+    width: 90%;
+    border-radius: 6px;
+    background-color: var(--corsecundaria);
+    animation: progress 0.4s ease-in-out forwards;
+}
+
+.skill-per.power-bi {
+    width: 95%;
+    animation-delay: 0.1;
+}
+.skill-per.python {
+    width: 70%;
+    animation-delay: 0.1;
+}
+.skill-per.pandas {
+    width: 95%;
+    animation-delay: 0.1s;
+}
+.skill-per.dax {
+    width: 90%;
+    animation-delay: 0.2s;
+}
+.skill-per.webscraping {
+    width: 80%;
+    animation-delay: 0.2s;
+}
+.skill-per.flask {
+    width: 65%;
+    animation-delay: 0.2s;
+}
+.skill-per.sql {
+    width: 40%;
+    animation-delay: 0.3s;
+}
+.skill-per.git {
+    width: 40%;
+    animation-delay: 0.3s;
+}
+.skill-per.api {
+    width: 65%;
+    animation-delay: 0.3s;
+}
+.skill-per.scrum {
+    width: 50%;
+    animation-delay: 0.5s;
+}
+.skill-per.gui {
+    width: 40%;
+    animation-delay: 0.4s;
+}
+.skill-per.html {
+    width: 40%;
+    animation-delay: 0.4s;
+}
+.skill-per.css {
+    width: 35%;
+    animation-delay: 0.4s;
+}
+
+@keyframes progress {
+    0% {
+        width: 0;
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+.skill-per .tooltip {
+    position: absolute;
+    right: -14px;
+    top: -28px;
+    font-size: 9px;
+    font-weight: 500;
+    color: #fff;
+    padding: 2px 6px;
+    border-radius: 3px;
+    background-color: var(--corsecundaria);
+}
+
+.tooltip::before {
+    content: '';
+    position: absolute;
+    left: 50%;
+    bottom: -2px;
+    height: 10px;
+    width: 10px;
+    z-index: -1;
+    background-color: var(--corsecundaria);
+    transform: translateX(-50%) rotate(45deg);
+}
+
+.years-xp {
+    color: #696969;
+    font-size: 12px;
+}
+
+.contato-section p {
+    width: 200px;
+    border-radius: 10px;
+    background-color: var(--background);
+    padding: 10px;
+}
+
+.contato-section a {
+    color: #171717;
+}
+
+.contato-section {
+    display: flex;
+    flex-wrap: wrap;
+    color: #171717;
+    justify-content: center;
+}
+
+.contato-section a:hover {
+    text-decoration: none;
+    color: white;
+}
+
+.contato-section > p:hover > a, .contato-section > p:hover > span {
+    color: #fff;
+}
+
+.contato-section span {
+    margin-top: 10px;
+    display: block;
+}
+
+abbr {
+    cursor: pointer;
 }
