Melhoria nos textos, descrição de cargos e download de curriculo em PDF

--- a/static/style.css
+++ b/static/style.css
@@ -478,3 +478,13 @@ small {
 abbr {
     cursor: pointer;
 }
+
+#pdf-download {
+    
+    margin: auto;
+    width: 170px;
+    padding: 10px;
+    background-color: var(--corsecundaria);
+    text-align: center;
+    border-radius: 20px;
+}
